# advent-of-code

./: .gitignore  README.md  shell.nix
2025/: dune-project  lib
2025/solutions/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  dune  init.ml
lib-ocaml/: coord.ml  coord.mli  coord3D.ml  coord3D.mli  dune  funcRegister.ml  funcRegister.mli  geometry.ml  geometry.mli  graph.ml  graph.mli  int.ml  int.mli  interval.ml  interval.mli  lp.ml  lp.mli  str.ml  str.mli
